--- a/Home/index.html
+++ b/Home/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="../Estilos/EstilosHome.css">
 </head>
     <body>
         <header>
-
+            
         </header>
         <main>
-            <iframe src="#" frameborder="0">
-                
+            <iframe src="#" frameborder="0">  
             </iframe>
         </main>        
     </body>
