--- a/Home/index.html
+++ b/Home/index.html
@@ -9,7 +9,10 @@
 </head>
     <body>
         <header>
-            
+            <div class="nombre"><h1>Pagina Web</h1></div>
+            <div class="logo">
+                <img src="../imagenes/home/logo1.png">
+            </div>
         </header>
         <main>
             <iframe src="#" frameborder="0">  
