Crea menu en header menu

--- a/Home/index.html
+++ b/Home/index.html
@@ -9,9 +9,28 @@
 </head>
     <body>
         <header>
-            <div class="nombre"><h1>Pagina Web</h1></div>
             <div class="logo">
+                <h1>Pagina Web</h1>
                 <img src="../imagenes/home/logo1.png">
+            </div>
+            <div class="menu">
+                <a href="#">
+                    <p>Plantilla 1</p>
+                </a><a href="#">
+                    <p>Plantilla 2</p>
+                </a><a href="#">
+                    <p>Plantilla 3</p>
+                </a><a href="#">
+                    <p>Plantilla 4</p>
+                </a><a href="#">
+                    <p>Plantilla 5</p>
+                </a><a href="#">
+                    <p>Plantilla 6</p>
+                </a><a href="#">
+                    <p>Plantilla 7</p>
+                </a><a href="#">
+                    <p>Plantilla 8</p>
+                </a>
             </div>
         </header>
         <main>
