Crea enlace con paginas de menu

--- a/Home/index.html
+++ b/Home/index.html
@@ -16,19 +16,26 @@
             <div class="menu">
                 <a href="#">
                     <p>Plantilla 1</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 1/index.html">
                     <p>Plantilla 2</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 2/index.html">
                     <p>Plantilla 3</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 3/index.html">
                     <p>Plantilla 4</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 4/index.html">
                     <p>Plantilla 5</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 6/index.html">
                     <p>Plantilla 6</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 7/index.html">
                     <p>Plantilla 7</p>
-                </a><a href="#">
+                </a>
+                <a href="../Plantilla 8/index.html">
                     <p>Plantilla 8</p>
                 </a>
             </div>
