Crea target en los enlaces y nombre al iframe

--- a/Home/index.html
+++ b/Home/index.html
@@ -17,31 +17,31 @@
                 <a href="#">
                     <p>Plantilla 1</p>
                 </a>
-                <a href="../Plantilla 1/index.html">
+                <a href="../Plantilla 1/index.html" target="iframeFlex">
                     <p>Plantilla 2</p>
                 </a>
-                <a href="../Plantilla 2/index.html">
+                <a href="../Plantilla 2/index.html" target="iframeFlex">
                     <p>Plantilla 3</p>
                 </a>
-                <a href="../Plantilla 3/index.html">
+                <a href="../Plantilla 3/index.html" target="iframeFlex">
                     <p>Plantilla 4</p>
                 </a>
-                <a href="../Plantilla 4/index.html">
+                <a href="../Plantilla 4/index.html" target="iframeFlex">
                     <p>Plantilla 5</p>
                 </a>
-                <a href="../Plantilla 6/index.html">
+                <a href="../Plantilla 6/index.html" target="iframeFlex">
                     <p>Plantilla 6</p>
                 </a>
-                <a href="../Plantilla 7/index.html">
+                <a href="../Plantilla 7/index.html" target="iframeFlex">
                     <p>Plantilla 7</p>
                 </a>
-                <a href="../Plantilla 8/index.html">
+                <a href="../Plantilla 8/index.html" target="iframeFlex">
                     <p>Plantilla 8</p>
                 </a>
             </div>
         </header>
         <main>
-            <iframe src="#" frameborder="0">  
+            <iframe frameborder="0" name="iframeFlex">  
             </iframe>
         </main>        
     </body>
