--- a/Plantilla 1/index.html
+++ b/Plantilla 1/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="../Estilos/EstilosP1.css">
 </head>
     <body>
-        
+        <header>
+
+        </header>
+        <main class="container-flex">
+            <div class="container-left">
+
+            </div>
+            <div class="container-rigth">
+
+            </div>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
