Asigna contenido a container left

--- a/Plantilla 1/index.html
+++ b/Plantilla 1/index.html
@@ -13,7 +13,9 @@
         </header>
         <main class="container-flex">
             <div class="container-left">
-
+                    <p>Meme 1</p>
+                    <img src="../imagenes/Plantilla1/meme1.jpg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel temporibus cum nemo, recusandae voluptate? Eveniet ipsam illo odit ex, architecto dolorum itaque vitae illum totam beatae error rerum voluptatem.</p>
             </div>
             <div class="container-rigth">
 
