--- a/Plantilla 1/index.html
+++ b/Plantilla 1/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>
-
+            <h1>Memes Lupe</h1>
         </header>
         <main class="container-flex">
             <div class="container-left">
@@ -28,7 +28,7 @@
             </div>
         </main>
         <footer>
-
+            <h1>Memes Lupe</h1>
         </footer>
     </body>
 </html>
