--- a/Plantilla 2/index.html
+++ b/Plantilla 2/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main class="container-flex">
+        <div class="container-left">
+
+        </div>
+        <div class="container-center">
+
+        </div>
+        <div class="container-rigth">
+            
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
