--- a/Plantilla 2/index.html
+++ b/Plantilla 2/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../Estilos/EstilosP2.css">
 </head>
 <body>
     <header>
@@ -18,7 +19,7 @@
 
         </div>
         <div class="container-rigth">
-            
+
         </div>
     </main>
     <footer>
