Asgino estilos a los contenedores left y rigth

--- a/Plantilla 4/index.html
+++ b/Plantilla 4/index.html
@@ -20,7 +20,7 @@
         <div class="container-center">
 
         </div>
-        <div class="container rigth">
+        <div class="container-rigth">
             <div></div>
             <div></div>
             <div></div>
