Creo estructura de plantilla

--- a/Plantilla 5/index.html
+++ b/Plantilla 5/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="..//Estilos/EstilosP5.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <header class="subheader">
+        <main class="container-flex">
+            <div class="container-left">
+                <div></div>
+                <div></div>
+            </div>
+            <div class="container-center">
+
+            </div>
+            <div class="container-rigth">
+                <div></div>
+                <div></div>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+    </header>
 </body>
 </html>
