--- a/Plantilla 6/index.html
+++ b/Plantilla 6/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../Estilos/EstilosP6.css">
 </head>
 <body>
     <main class="container-flex">
@@ -19,7 +20,7 @@
 
             </div>
             <footer>
-                
+
             </footer>
         </div>
     </main>
