Asigno estilo a container-flexjr

--- a/Plantilla 6/index.html
+++ b/Plantilla 6/index.html
@@ -17,7 +17,8 @@
 
             </header>
             <div class="container-flexjr">
-
+                <div></div>
+                <div></div>
             </div>
             <footer>
 
