--- a/Plantilla 7/index.html
+++ b/Plantilla 7/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="../Estilos/EstilosP7.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <main class="container-flex">
+        <div></div>
+        <div></div>
+        <div></div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
