Asgino tamano y tipo de letra a todo

--- a/Plantilla 8/index.html
+++ b/Plantilla 8/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="../Estilos/EstilosP8.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <div class="container-flex">
+
+        </div>
+        <div class="container-center">
+
+        </div>
+        <div class="container-rigth">
+            
+        </div>
+    </main>
 </body>
 </html>
