--- a/Plantilla 8/index.html
+++ b/Plantilla 8/index.html
@@ -16,10 +16,15 @@
 
         </div>
         <div class="container-center">
-
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
         <div class="container-rigth">
-            
+
         </div>
     </main>
 </body>
