--- a/Plantilla 8/index.html
+++ b/Plantilla 8/index.html
@@ -12,7 +12,7 @@
 
     </header>
     <main>
-        <div class="container-flex">
+        <div class="container-left">
 
         </div>
         <div class="container-center">
