Cambio de color a container left

--- a/Plantilla 1/index.html
+++ b/Plantilla 1/index.html
@@ -13,9 +13,9 @@
         </header>
         <main class="container-flex">
             <div class="container-left">
-                    <p>Meme 1</p>
+                    <p>El mejor amigo del hombre?</p>
                     <img src="../imagenes/Plantilla1/meme1.jpg">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo vel temporibus cum nemo, recusandae voluptate? Eveniet ipsam illo odit ex, architecto dolorum itaque vitae illum totam beatae error rerum voluptatem.</p>
+                    <p>Esta afirmación directamente relacionada con su inquebrantable lealtad y sus infinitas cualidades como animal de compañía no esconde sin embargo que los canes también han sido muy útiles históricamente en labores de trabajo, rescate o investigación policial.</p>
             </div>
             <div class="container-rigth">
                 <h1>El meme del mes</h1>
