Cambio de contenido

--- a/Plantilla 1/index.html
+++ b/Plantilla 1/index.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <header>
-            <h1>Memes Lupe</h1>
+            <h1>El perro</h1>
         </header>
         <main class="container-flex">
             <div class="container-left">
@@ -18,17 +18,13 @@
                     <p>Esta afirmación directamente relacionada con su inquebrantable lealtad y sus infinitas cualidades como animal de compañía no esconde sin embargo que los canes también han sido muy útiles históricamente en labores de trabajo, rescate o investigación policial.</p>
             </div>
             <div class="container-rigth">
-                <h1>El meme del mes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam quisquam aliquam repudiandae aspernatur non aut, nam quas quasi temporibus facilis dolores deserunt minus odio ipsa rem alias quod vel dolorum.</p>
-                <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia corporis, quis eaque accusamus animi blanditiis rerum voluptates esse voluptatem consectetur voluptatibus commodi.</li>
-                    <li>lorem</li>
-                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ab dicta. Aperiam, ipsa unde dolorem nulla illo</li>
-                </ul>
+                <h1>Canis familiaris</h1>
+                <p>El perro doméstico es una forma domesticada de lobo. El perro desciende de un lobo antiguo y extinto, siendo el lobo moderno el pariente vivo más cercano del perro. El perro fue la primera especie en ser domesticada por cazadores-recolectores hace más de 15.000 años, antes del desarrollo de la agricultura.</p>
+                <img src="../imagenes/Plantilla1/meme2.jpg">
             </div>
         </main>
         <footer>
-            <h1>Memes Lupe</h1>
+            <h1>Gracias Perro</h1>
         </footer>
     </body>
 </html>
