--- a/Plantilla 2/index.html
+++ b/Plantilla 2/index.html
@@ -9,21 +9,27 @@
 </head>
 <body>
     <header>
-
+        <h1>Girasol</h1>
     </header>
     <main class="container-flex">
         <div class="container-left">
-
+            <h1>Helianthus annuus</h1>
+            <p>Es una planta herbácea anual de la familia de las asteráceas originaria de Centro y Norteamérica y cultivada como alimenticia, oleaginosa y ornamental en todo el mundo.</p>
+            <ul>
+                <li>Nombre científico: Helianthus annuus</li>
+                <li>Familia: Asteraceae</li>
+                <li>Especie: Helianthus annuus; L., 1753</li>
+            </ul>
         </div>
         <div class="container-center">
-
+            <img src="../imagenes/Plantilla2/girasol.jpg" >
         </div>
         <div class="container-rigth">
-
+            <h1>Semilla de girasol</h1>
+            <img src="../imagenes/Plantilla2/semilla.jpg" >
         </div>
     </main>
     <footer>
-
     </footer>
 </body>
 </html>
