--- a/Plantilla 4/index.html
+++ b/Plantilla 4/index.html
@@ -13,17 +13,18 @@
     </header>
     <main>
         <div class="container-left">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="../imagenes/Plantilla4/kiwi.jpg"></div>
+            <div><img src="../imagenes/Plantilla4/manzana.png"></div>
+            <div><img src="../imagenes/Plantilla4/pera.jpg"></div>
         </div>
         <div class="container-center">
-
+            <h1>Que es una fruta?</h1>
+            <p>Se denomina fruta a aquellos frutos comestibles obtenidos de plantas cultivadas o silvestres que, por su sabor generalmente dulce-acidulado, su aroma intenso y agradable y sus propiedades nutritivas, suelen consumirse mayormente en su estado fresco, como jugo o como postre (y en menor medida, en otras preparaciones), una vez alcanzada la madurez organoléptica, o luego de ser sometidos a cocción.</p>
         </div>
         <div class="container-rigth">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img src="../imagenes/Plantilla4/platano.jpg"></div>
+            <div><img src="../imagenes/Plantilla4/sandia.jpg"></div>
+            <div><img src="../imagenes/Plantilla4/uva.jpg"></div>
         </div>
     </main>
 </body>
