Edito contenido de subheader

--- a/Plantilla 4/index.html
+++ b/Plantilla 4/index.html
@@ -56,7 +56,16 @@
             </div>
         </div>
         <div class="container-center">
+            <p>
+                Qué es Poema:   <hr>
 
+Se denomina poema a la composición literaria escrita en verso, que pertenece al género de la poesía y cuya estructura métrica se encarga de la formación rítmica.
+
+Otra manera de emplear este término es para referirse a una situación o cosa que se considera esperpéntica, fuera de lugar o particular en un sentido negativo. Por ejemplo, “Después de perder el partido, su cara era un poema”.
+
+La palabra poema procede del latín poēma, y este del griego ποίημα (poiēma, que significa creación, hazaña) y ποιήμα (poiesis), cuya raíz es poiein (hacer, crear). No obstante, originariamente se utilizaba la palabra poema para denominar cualquier obra literaria.
+            </p>
+            <img src="../imagenes/Plantilla4/poema.jpg">
         </div>
         <div class="container-rigth">
             <div>
