--- a/Plantilla 5/index.html
+++ b/Plantilla 5/index.html
@@ -12,6 +12,9 @@
 
     </header>
     <header class="subheader">
+        <marquee>
+            <img src="../imagenes/Imagenes/carro.gif">
+        </marquee>
     </header>
         <main class="container-flex">
             <div class="container-left">
