--- a/Plantilla 5/index.html
+++ b/Plantilla 5/index.html
@@ -18,15 +18,15 @@
     </header>
         <main class="container-flex">
             <div class="container-left">
-                <div></div>
-                <div></div>
+                <div><img src="../imagenes/Imagenes/carro1.jpeg" alt=""></div>
+                <div><img src="../imagenes/Imagenes/carro2.jpg" alt=""></div>
             </div>
             <div class="container-center">
 
             </div>
             <div class="container-rigth">
-                <div></div>
-                <div></div>
+                <div><img src="../imagenes/Imagenes/carro3.jpg" alt=""></div>
+                <div><img src="../imagenes/Imagenes/carro4.jpg" alt=""></div>
             </div>
         </main>
         <footer>
