--- a/Plantilla 5/index.html
+++ b/Plantilla 5/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-
+        <h1>Carros</h1>
     </header>
     <header class="subheader">
         <marquee>
@@ -22,7 +22,10 @@
                 <div><img src="../imagenes/Imagenes/carro2.jpg" alt=""></div>
             </div>
             <div class="container-center">
-
+                <h1>Carro</h1>
+                <p>
+                    Los carros son carruajes: medios de transporte que disponen de un armazón montado sobre las ruedas. En este caso, el armazón presenta un bastidor con cuerdas que permiten sostener la carga y con tablas que la sujetan. Además tiene varas que sirven para el enganche del tiro.
+                </p>
             </div>
             <div class="container-rigth">
                 <div><img src="../imagenes/Imagenes/carro3.jpg" alt=""></div>
