--- a/Plantilla 6/index.html
+++ b/Plantilla 6/index.html
@@ -10,18 +10,26 @@
 <body>
     <main class="container-flex">
         <div class="container-left">
-
+            <h1>Desierto</h1>
+            <p>
+                Un desierto es un bioma de clima árido, en donde las precipitaciones son escasas. Estos suelen poseer poca vida, pero eso depende del tipo de desierto; en muchos existe vida abundante, la vegetación se adapta a la poca humedad (matorral xerófilo) y la fauna usualmente se resguarda durante el día para preservar humedad. El establecimiento de grupos sociales en los desiertos es complicado y requiere de una importante adaptación a las condiciones extremas que en ellos imperan. Los desiertos forman la zona más extensa de la superficie terrestre: con más de 50 millones de kilómetros cuadrados, ocupan casi un tercio de esta. De este total, 53 % corresponden a desiertos cálidos y 47 % a desiertos fríos.1​
+            </p>
         </div>
         <div class="container-rigth">
             <header>
-
+                <marquee behavior="" direction="">
+                    <p>
+                        Dos granos de arena van por el desierto:
+- Shhhh no te des vuelta y sigue caminando, creo que nos siguen!!
+                    </p>
+                </marquee>
             </header>
             <div class="container-flexjr">
-                <div></div>
-                <div></div>
+                <div><img src="../imagenes/Plantilla6/desierto.jpg" alt=""></div>
+                <div><img src="../imagenes/Plantilla6/desierto2.jpg" alt=""></div>
             </div>
             <footer>
-
+                <img src="../imagenes/Plantilla6/camello.gif" alt="">
             </footer>
         </div>
     </main>
