Modifico colores e inserto imagenes en section

--- a/Plantilla 7/index.html
+++ b/Plantilla 7/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-
+        <h1>La cocinita</h1>
     </header>
     <section>
-
+        <img src="../imagenes/Menu.jpg" alt="">
     </section>
     <main class="container-flex">
         <div></div>
