--- a/Plantilla 7/index.html
+++ b/Plantilla 7/index.html
@@ -15,12 +15,21 @@
         <img src="../imagenes/Menu.jpg" alt="">
     </section>
     <main class="container-flex">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <h1>Platillo 1</h1>
+            <img src="../imagenes/Plantilla7/p1.png" alt="">
+        </div>
+        <div>
+            <h1>Platillo 2</h1>
+            <img src="../imagenes/Plantilla7/p2.png" alt="">
+        </div>
+        <div>
+            <h1>Platillo 3</h1>
+            <img src="../imagenes/Plantilla7/p3.png" alt="">
+        </div>
     </main>
     <footer>
-
+        <img src="../imagenes/Plantilla7/taco.gif" alt="">
     </footer>
 </body>
 </html>
