--- a/Plantilla 8/index.html
+++ b/Plantilla 8/index.html
@@ -13,18 +13,42 @@
     </header>
     <main>
         <div class="container-left">
-
+            <img src="../imagenes/Plantilla8/messi.jpg" alt="">
         </div>
         <div class="container-center">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="partido">
+                    <img src="../imagenes/Plantilla8/wwe.png" alt="">
+                    <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/atm.png" alt="">
+                </div>
+            <div class="partido">
+                    <img src="../imagenes/Plantilla8/crz.png" alt="">
+                    <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/by.png" alt="">
+                </div>
+            <div class="partido">
+                    <img src="../imagenes/Plantilla8/12.png" alt="">
+                    <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/tg.png" alt="">
+                 </div>
+            <div class="partido">
+                <img src="../imagenes/Plantilla8/roma.png" alt="">
+                <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/mex.png" alt="">
+            </div>
+            <div class="partido">
+                <img src="../imagenes/Plantilla8/psg.png" alt="">
+                    <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/crz.png" alt="">
+            </div>
+            <div class="partido">
+                <img src="../imagenes/Plantilla8/myr.png" alt="">
+                <h1>VS</h1>
+                    <img src="../imagenes/Plantilla8/tg.png" alt="">
+            </div>
         </div>
         <div class="container-rigth">
-
+            <img src="../imagenes/Plantilla8/cr.jpg" alt="">
         </div>
     </main>
 </body>
